--- a/app/src/main/res/layout/fragment_classroom2_idle.xml
+++ b/app/src/main/res/layout/fragment_classroom2_idle.xml
@@ -48,9 +48,10 @@
             />
 
     <FrameLayout
-        android:id="@+id/screenshot_container"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"/>
+            android:id="@+id/screenshot_container"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            />
 
     <include
             layout="@layout/layout_classroom2_right_slide_panel"
