--- a/app/src/main/res/layout/layout_classroom2_member_item.xml
+++ b/app/src/main/res/layout/layout_classroom2_member_item.xml
@@ -38,6 +38,18 @@
             />
 
     <TextView
+            android:id="@+id/flag_mark"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignBaseline="@id/name"
+            android:layout_toRightOf="@id/name"
+            android:layout_marginLeft="@dimen/px16"
+            android:textSize="@dimen/font_20px"
+            android:padding="@dimen/px2"
+            android:textColor="@color/font_white"
+            />
+
+    <TextView
             android:id="@+id/desc"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
