--- a/app/src/main/res/layout/layout_classroom2_chat_item_popup_menu.xml
+++ b/app/src/main/res/layout/layout_classroom2_chat_item_popup_menu.xml
@@ -10,8 +10,9 @@
 
     <Button
             android:id="@+id/copy"
-            android:layout_width="wrap_content"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
+            android:layout_weight="1.0"
             android:text="复制"
             android:textColor="@color/font_white"
             android:textSize="@dimen/font_15px"
@@ -21,8 +22,9 @@
 
     <Button
             android:id="@+id/delete"
-            android:layout_width="wrap_content"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
+            android:layout_weight="1.0"
             android:text="删除"
             android:textColor="@color/font_white"
             android:textSize="@dimen/font_15px"
