--- a/app/src/main/res/layout/layout_classroom2_chat_sendout.xml
+++ b/app/src/main/res/layout/layout_classroom2_chat_sendout.xml
@@ -72,6 +72,7 @@
             android:layout_toLeftOf="@id/avator"
             android:layout_below="@id/name"
             android:background="@drawable/class_chatbg2"
+            android:clickable="true"
             android:visibility="gone"
             />
 
