--- a/app/src/main/res/layout/layout_classroom2_member_ver_item.xml
+++ b/app/src/main/res/layout/layout_classroom2_member_ver_item.xml
@@ -64,6 +64,7 @@
             android:layout_width="match_parent"
             android:layout_height="@dimen/px20"
             android:background="@color/gray_line"
+            android:layout_marginTop="@dimen/px29"
             android:layout_alignParentBottom="true"
             />
 </RelativeLayout>
