--- a/app/src/main/res/layout/fragment_classroom2_chat_session.xml
+++ b/app/src/main/res/layout/fragment_classroom2_chat_session.xml
@@ -57,63 +57,19 @@
             android:scrollbars="none"
             android:background="@color/classroom_gray_1"
             app:layout_constraintTop_toBottomOf="@id/title_line"
-            app:layout_constraintBottom_toTopOf="@+id/bottom_line"
+            app:layout_constraintBottom_toTopOf="@+id/bottom_bar"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"/>
 
-    <View
-            android:id="@id/bottom_line"
+
+    <include
+            android:id="@+id/bottom_bar"
+            layout="@layout/layout_classroom2_chat_session_bottom_bar"
             android:layout_width="0dp"
-            android:layout_height="@dimen/px1"
-            android:background="@color/hor_divide_line"
-            android:layout_marginBottom="@dimen/px100"
+            android:layout_height="wrap_content"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
-            />
-
-
-    <Button
-            android:id="@+id/send_btn"
-            android:layout_width="wrap_content"
-            android:layout_height="@dimen/px56"
-            android:text="@string/send"
-            android:gravity="center"
-            android:textSize="@dimen/font_28px"
-            android:textColor="@color/white"
-            android:paddingLeft="@dimen/px20"
-            android:paddingRight="@dimen/px20"
-            android:paddingTop="@dimen/px5"
-            android:paddingBottom="@dimen/px5"
-            android:background="@drawable/cr_chat_send_bg"
-            android:layout_marginRight="@dimen/px18"
-            app:layout_constraintTop_toBottomOf="@id/bottom_line"
-            app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintBottom_toBottomOf="parent"
-            />
-
-
-    <cn.xiaojs.xma.ui.widget.SpecialEditText
-            android:id="@+id/msg_input"
-            android:layout_width="0dp"
-            android:layout_height="0dp"
-            android:background="@drawable/cr_msg_input_bg"
-            android:paddingLeft="@dimen/px15"
-            android:paddingRight="@dimen/px15"
-            android:paddingTop="@dimen/px2"
-            android:paddingBottom="@dimen/px2"
-            android:textSize="@dimen/font_28px"
-            android:hint="@string/class_chat_input"
-            android:textColorHint="@color/font_gray"
-            android:layout_gravity="left|center_vertical"
-            android:layout_marginBottom="@dimen/px15"
-            android:layout_marginTop="@dimen/px15"
-            android:layout_marginLeft="@dimen/px30"
-            android:layout_marginRight="@dimen/px30"
-            app:layout_constraintTop_toBottomOf="@id/bottom_line"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintRight_toLeftOf="@id/send_btn"
             />
 
 
@@ -127,9 +83,11 @@
             android:gravity="center"
             android:layout_marginBottom="@dimen/px21"
             android:layout_marginLeft="@dimen/px22"
-            app:layout_constraintBottom_toTopOf="@id/bottom_line"
+            app:layout_constraintBottom_toTopOf="@id/bottom_bar"
             app:layout_constraintLeft_toLeftOf="parent"
             android:visibility="gone"/>
+
+
 
 
 </android.support.constraint.ConstraintLayout>
