--- a/app/src/main/res/layout/fragment_classroom2_profile.xml
+++ b/app/src/main/res/layout/fragment_classroom2_profile.xml
@@ -125,7 +125,7 @@
                 />
 
         <Button
-                android:id="@id/send_btn"
+                android:id="@+id/send_btn"
                 android:layout_width="wrap_content"
                 android:layout_height="@dimen/px88"
                 android:background="@drawable/cr_chat_send_bg"
