--- a/app/src/main/res/layout/fragment_classroom2_setting.xml
+++ b/app/src/main/res/layout/fragment_classroom2_setting.xml
@@ -1,129 +1,126 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-             xmlns:app="http://schemas.android.com/apk/res-auto"
-                android:id="@+id/root_lay"
-             android:layout_width="match_parent"
-             android:layout_height="match_parent"
-        >
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:id="@+id/root_lay"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent">
 
     <android.support.constraint.ConstraintLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_marginTop="@dimen/px88"
-            android:layout_alignParentTop="true"
-            android:background="@drawable/bottomsheet_bg_white_rect">
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_alignParentTop="true"
+        android:layout_marginTop="@dimen/px88"
+        android:background="@drawable/bottomsheet_bg_white_rect">
 
         <TextView
-                android:id="@+id/title"
-                android:layout_width="0dp"
-                android:layout_height="44dp"
-                android:layout_marginTop="@dimen/px21"
-                android:text="教室设置"
-                android:textSize="@dimen/px32"
-                android:gravity="center"
-                android:textColor="@color/classroom_dark_gray"
-                app:layout_constraintTop_toTopOf="parent"
-                app:layout_constraintLeft_toLeftOf="parent"
-                app:layout_constraintRight_toRightOf="parent"/>
+            android:id="@+id/title"
+            android:layout_width="0dp"
+            android:layout_height="44dp"
+            android:layout_marginTop="@dimen/px21"
+            android:gravity="center"
+            android:text="设置"
+            android:textColor="@color/classroom_dark_gray"
+            android:textSize="@dimen/px32"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
 
         <View
-                android:id="@+id/top_line"
-                android:layout_width="0dp"
-                android:layout_height="1dp"
-                android:background="@color/gray_line"
-                app:layout_constraintTop_toBottomOf="@+id/title"
-                app:layout_constraintLeft_toLeftOf="parent"
-                app:layout_constraintRight_toRightOf="parent"
-                />
+            android:id="@+id/top_line"
+            android:layout_width="0dp"
+            android:layout_height="1dp"
+            android:background="@color/gray_line"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/title" />
 
         <CheckedTextView
-                android:id="@+id/check_4g"
-                android:layout_width="0dp"
-                android:layout_height="54dp"
-                android:text="允许3G/4G直播、观看直播或回放"
-                android:checkMark="@drawable/toggle_btn_selector"
-                android:gravity="center_vertical"
-                android:paddingLeft="@dimen/px30"
-                android:paddingRight="@dimen/px30"
-                app:layout_constraintTop_toBottomOf="@+id/top_line"
-                app:layout_constraintLeft_toLeftOf="parent"
-                app:layout_constraintRight_toRightOf="parent"
-                />
+            android:id="@+id/check_4g"
+            android:layout_width="0dp"
+            android:layout_height="54dp"
+            android:checkMark="@drawable/toggle_btn_selector"
+            android:gravity="center_vertical"
+            android:paddingLeft="@dimen/px30"
+            android:paddingRight="@dimen/px30"
+            android:text="允许3G/4G直播、观看直播或回放"
+            android:visibility="gone"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/top_line" />
 
         <View
-                android:id="@+id/item_line"
-                android:layout_width="0dp"
-                android:layout_height="1dp"
-                android:background="@color/gray_line"
-                app:layout_constraintTop_toBottomOf="@id/check_4g"
-                app:layout_constraintLeft_toLeftOf="parent"
-                app:layout_constraintRight_toRightOf="parent"
-                />
-        
+            android:id="@+id/item_line"
+            android:layout_width="0dp"
+            android:layout_height="1dp"
+            android:background="@color/gray_line"
+            android:visibility="gone"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/check_4g" />
+
         <TextView
-                android:id="@+id/level_title"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="画面分辨率"
-                android:textSize="@dimen/font_30px"
-                android:textColor="@color/font_black"
-                android:layout_marginTop="@dimen/px28"
-                android:paddingLeft="@dimen/px30"
-                app:layout_constraintLeft_toLeftOf="parent"
-                app:layout_constraintTop_toBottomOf="@id/item_line"
-                />
+            android:id="@+id/level_title"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="@dimen/px28"
+            android:paddingLeft="@dimen/px30"
+            android:text="画面分辨率"
+            android:textColor="@color/font_black"
+            android:textSize="@dimen/font_30px"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/item_line" />
 
         <RadioGroup
-                android:id="@+id/level_group"
-                android:layout_width="0dp"
+            android:id="@+id/level_group"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="@dimen/px26"
+            android:gravity="center"
+            android:orientation="horizontal"
+            android:paddingLeft="@dimen/px30"
+            android:paddingRight="@dimen/px30"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/level_title">
+
+            <RadioButton
+                android:id="@+id/level_smooth"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:orientation="horizontal"
+                android:button="@drawable/single_check_selector"
                 android:gravity="center"
-                android:layout_marginTop="@dimen/px26"
-                android:paddingLeft="@dimen/px30"
-                android:paddingRight="@dimen/px30"
-                app:layout_constraintTop_toBottomOf="@id/level_title"
-                app:layout_constraintLeft_toLeftOf="parent"
-                app:layout_constraintRight_toRightOf="parent"
-                >
-            <RadioButton
-                    android:id="@+id/level_smooth"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:button="@drawable/single_check_selector"
-                    android:gravity="center"
-                    android:paddingBottom="@dimen/px11"
-                    android:paddingTop="@dimen/px11"
-                    android:text="流畅"
-                    android:textColor="@color/font_dark_gray"
-                    android:textSize="@dimen/font_28px" />
+                android:paddingBottom="@dimen/px11"
+                android:paddingTop="@dimen/px11"
+                android:text="流畅"
+                android:textColor="@color/font_dark_gray"
+                android:textSize="@dimen/font_28px" />
 
             <RadioButton
-                    android:id="@+id/level_sd"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:button="@drawable/single_check_selector"
-                    android:gravity="center"
-                    android:paddingBottom="@dimen/px11"
-                    android:paddingTop="@dimen/px11"
-                    android:layout_marginLeft="@dimen/px170"
-                    android:layout_marginRight="@dimen/px170"
-                    android:text="标清"
-                    android:layout_gravity="center"
-                    android:textColor="@color/font_dark_gray"
-                    android:textSize="@dimen/font_28px" />
+                android:id="@+id/level_sd"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:layout_marginLeft="@dimen/px170"
+                android:layout_marginRight="@dimen/px170"
+                android:button="@drawable/single_check_selector"
+                android:gravity="center"
+                android:paddingBottom="@dimen/px11"
+                android:paddingTop="@dimen/px11"
+                android:text="标清"
+                android:textColor="@color/font_dark_gray"
+                android:textSize="@dimen/font_28px" />
 
             <RadioButton
-                    android:id="@+id/level_hd"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:button="@drawable/single_check_selector"
-                    android:gravity="center"
-                    android:paddingBottom="@dimen/px11"
-                    android:paddingTop="@dimen/px11"
-                    android:text="高清"
-                    android:textColor="@color/font_dark_gray"
-                    android:textSize="@dimen/font_28px" />
+                android:id="@+id/level_hd"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:button="@drawable/single_check_selector"
+                android:gravity="center"
+                android:paddingBottom="@dimen/px11"
+                android:paddingTop="@dimen/px11"
+                android:text="高清"
+                android:textColor="@color/font_dark_gray"
+                android:textSize="@dimen/font_28px" />
         </RadioGroup>
 
 
