--- a/app/src/main/res/layout/fragment_discover.xml
+++ b/app/src/main/res/layout/fragment_discover.xml
@@ -190,6 +190,15 @@
 
             </LinearLayout>
 
+            <cn.xiaojs.xma.ui.widget.LoadingView
+                android:id="@+id/web_loading_view"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center_horizontal"
+                android:layout_marginTop="@dimen/px80"
+                />
+
+
             <WebView
                 android:id="@+id/webview"
                 android:background="@color/white"
