Signed-off-by: Maxb <maxb@jyzblm.com>

--- a/app/src/main/res/layout/layout_classroom2_chat_received.xml
+++ b/app/src/main/res/layout/layout_classroom2_chat_received.xml
@@ -60,7 +60,7 @@
 
 
 
-    <TextView
+    <android.support.text.emoji.widget.EmojiAppCompatTextView
             android:id="@+id/content_text"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
