--- a/app/src/main/res/layout/layout_classroom2_chat_land.xml
+++ b/app/src/main/res/layout/layout_classroom2_chat_land.xml
@@ -28,7 +28,7 @@
             android:layout_alignParentTop="true"
             />
 
-    <TextView
+    <android.support.text.emoji.widget.EmojiAppCompatTextView
             android:id="@+id/content_text"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
