--- a/app/src/main/res/layout/layout_classroom2_chat_session_bottom_bar.xml
+++ b/app/src/main/res/layout/layout_classroom2_chat_session_bottom_bar.xml
@@ -56,7 +56,7 @@
         </FrameLayout>
 
 
-        <EditText
+        <android.support.text.emoji.widget.EmojiAppCompatEditText
                 android:id="@+id/bar_input_text"
                 android:textCursorDrawable="@null"
                 android:textColor="@color/black"
@@ -88,12 +88,13 @@
             android:layout_height="@dimen/px400"
             android:visibility="visible">
 
-
         <LinearLayout
+                android:id="@+id/action_layout"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:orientation="horizontal"
-                android:padding="@dimen/px40">
+                android:padding="@dimen/px40"
+                android:visibility="gone">
 
             <TextView
                     android:id="@+id/action_photo"
@@ -102,6 +103,7 @@
                     android:drawableTop="@drawable/ic_class_sendphotos"
                     android:gravity="center"
                     android:drawablePadding="@dimen/px8"
+                    android:textColor="@color/font_black"
                     android:text="照片"/>
 
             <TextView
@@ -112,6 +114,7 @@
                     android:gravity="center"
                     android:drawablePadding="@dimen/px8"
                     android:text="拍摄"
+                    android:textColor="@color/font_black"
                     android:layout_marginLeft="@dimen/px40"/>
 
             <TextView
@@ -122,9 +125,19 @@
                     android:gravity="center"
                     android:drawablePadding="@dimen/px8"
                     android:text="我的资料库"
+                    android:textColor="@color/font_black"
                     android:layout_marginLeft="@dimen/px40"/>
 
         </LinearLayout>
+
+        <cn.xiaojs.xma.common.emoji.EmojiconGridView
+                android:id="@+id/emoji_grid"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:numColumns="8"
+                android:background="@color/white"
+                android:listSelector="@android:color/transparent"
+                android:visibility="gone"/>
 
 
     </FrameLayout>
