--- a/app/src/main/res/values/attrs.xml
+++ b/app/src/main/res/values/attrs.xml
@@ -1,5 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
+    <declare-styleable name="EmojiconStyle">
+        <attr name="emojiconGridViewStyle" format="reference"/>
+    </declare-styleable>
     <!-- rounded image -->
     <declare-styleable name="RoundedImageView">
         <attr name="corner_radius" format="dimension"/>
