Signed-off-by: Maxb <maxb@jyzblm.com>

--- a/app/src/main/res/layout/layout_classroom2_chat_session_bottom_bar.xml
+++ b/app/src/main/res/layout/layout_classroom2_chat_session_bottom_bar.xml
@@ -56,7 +56,7 @@
         </FrameLayout>
 
 
-        <android.support.text.emoji.widget.EmojiAppCompatEditText
+        <EditText
                 android:id="@+id/bar_input_text"
                 android:textCursorDrawable="@null"
                 android:textColor="@color/black"
