--- a/app/src/main/res/layout/fragment_classroom_board_collaborate.xml
+++ b/app/src/main/res/layout/fragment_classroom_board_collaborate.xml
@@ -22,14 +22,14 @@
         android:layout_gravity="center"
         android:visibility="gone"></cn.xiaojs.xma.ui.classroom.whiteboard.WhiteboardScrollerView>
 
-    <ImageView
+  <!--  <ImageView
         android:id="@+id/test_preview"
         android:layout_width="@dimen/px330"
         android:layout_height="@dimen/px190"
         android:padding="5dp"
         android:layout_centerHorizontal="true"
         android:background="@color/black"
-        android:scaleType="fitXY"/>
+        android:scaleType="fitXY"/>-->
     <TextView
         android:id="@+id/text_pager_points"
         android:layout_width="wrap_content"
