--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -176,6 +176,7 @@
 
     <color name="green_grass">#33DECC</color>
     <color name="white_opacity_35">#a6ffffff</color>
+    <color name="black_opacity_80">#33000000</color>
     <color name="black_opacity_60">#66000000</color>
     <color name="black_opacity_50">#80000000</color>
     <color name="black_opacity_40">#99000000</color>
